<resources>
    <string name="app_name">Elmataam</string>
    <string name="facebook_app_id">867383546693447</string>
    <string name="title_activity_testing">TestingActivity</string>

    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="email">Email</string>
    <string name="terms_conditions">I accept the terms of use and privacy conditions</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="forget_pass">Forget your password?</string>
    <string name="login">Log in</string>
    <string name="signup">Don\'t have an account? Sign up.</string>
    <string name="search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="interests">Interests</string>


    <string name="delete_btn">This is a delete button for the interests table</string>

<string name="app_description">Elmatعm is a mobile application that helps users find their best match for restaurants and cafes based on location, user budget and preferences for both service
and cuisine type.</string>
    <string name="title_activity_check_in">CheckInActivity</string>
</resources>
