<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".register.RegisterActivity">
    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminateDrawable="@drawable/progress"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/tv_Register"
        android:textSize="25sp"
        android:textColor="@color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email_register"
        android:hint="@string/email"
        android:maxLines="1"
        android:inputType="textWebEmailAddress"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@+id/tv_Register"
        android:drawableLeft="@drawable/email"
        android:drawableStart="@drawable/email"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_pass_register"
        android:hint="@string/password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@+id/et_email_register"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_confirm_pass"
        android:hint="@string/confirm_pass"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@+id/et_pass_register"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"

        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/name"
        android:drawableStart="@drawable/name"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColorHint="@color/black"
        android:maxLines="1"
        android:layout_below="@id/et_confirm_pass"
        android:id="@+id/et_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:drawableLeft="@drawable/phone"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColorHint="@color/black"
        android:maxLines="1"
        android:layout_below="@id/et_name"
        android:id="@+id/et_phone"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cb_conditions"
        android:layout_below="@id/et_phone"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:text="@string/terms_conditions"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_conditions"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/btn_save"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />

</RelativeLayout>
