<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.halla.elmataamapp.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/tv_Register"
        android:textSize="25sp"
        android:textColor="@color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email_register"
        android:hint="@string/email"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@+id/tv_Register"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_pass_register"
        android:hint="@string/password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@+id/et_email_register"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_confirm_pass"
        android:hint="@string/confirm_pass"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@+id/et_pass_register"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColorHint="@color/black"
        android:maxLines="1"
        android:layout_below="@id/et_confirm_pass"
        android:layout_marginRight="20dp"
        android:id="@+id/et_phone"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cb_conditions"
        android:layout_below="@id/et_phone"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="11sp"
        android:text="@string/terms_conditions"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_conditions"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/btn_register"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />

</RelativeLayout>
