<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/background">
    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminateDrawable="@drawable/progress"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/our_logo"
        android:id="@+id/img_logo"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:layout_below="@+id/img_logo"
        android:id="@+id/cardview_login"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/email"
                android:layout_centerHorizontal="true"
                android:inputType="textWebEmailAddress"
                android:id="@+id/et_email"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/black"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/password"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:id="@+id/et_pass"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_pass"
                android:textColor="@color/black"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/tv_forgetpass"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/btn_login"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginBottom="5dp"
        android:id="@+id/tv_register_login"
        android:text="@string/signup"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>